--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ compose_navigation = "2.7.6"
 room = "2.6.1"
 splash = "1.0.1"
 gson = "2.10.1"
+work = "2.9.0"
 
 [libraries]
 apollo = { group = "com.apollographql.apollo3", name = "apollo-runtime", version.ref = "apollo" }
@@ -44,6 +45,7 @@ android-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", 
 android-core = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 android-lifecycle = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "android_lifecycle" }
 android-splash = { group = "androidx.core", name = "core-splashscreen", version.ref = "splash" }
+android-work = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work" }
 compose-activity = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 compose-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "compose_navigation" }
