--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ room = "2.6.1"
 splash = "1.0.1"
 gson = "2.10.1"
 work = "2.9.0"
+hilt_work = "1.0.0"
 
 [libraries]
 apollo = { group = "com.apollographql.apollo3", name = "apollo-runtime", version.ref = "apollo" }
@@ -31,6 +32,7 @@ android-security-crypto = { group = "androidx.security", name = "security-crypto
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt_navigation" }
+hilt-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hilt_work" }
 
 kotlin-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
 
