--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,7 +22,7 @@ room = "2.6.1"
 splash = "1.0.1"
 gson = "2.10.1"
 work = "2.9.0"
-hilt_work = "1.0.0"
+hilt_work = "1.1.0"
 
 [libraries]
 apollo = { group = "com.apollographql.apollo3", name = "apollo-runtime", version.ref = "apollo" }
@@ -47,6 +47,7 @@ android-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", 
 android-core = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 android-lifecycle = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "android_lifecycle" }
 android-splash = { group = "androidx.core", name = "core-splashscreen", version.ref = "splash" }
+android-hilt = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hilt_work" }
 android-work = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work" }
 compose-activity = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 compose-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
