--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ gson = "2.10.1"
 work = "2.9.0"
 hilt_work = "1.1.0"
 junit = "4.13.2"
+datastore = "1.0.0"
 
 [libraries]
 apollo = { group = "com.apollographql.apollo3", name = "apollo-runtime", version.ref = "apollo" }
@@ -50,6 +51,7 @@ android-lifecycle = { group = "androidx.lifecycle", name = "lifecycle-runtime-co
 android-splash = { group = "androidx.core", name = "core-splashscreen", version.ref = "splash" }
 android-hilt = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hilt_work" }
 android-work = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work" }
+android-datastore = { group = "androidx.datastore", name = "datastore", version.ref = "datastore" }
 compose-activity = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 compose-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "compose_navigation" }
